# Real-Time-Data-Streaming-Pipeline-

./: README.md
1- Real-Time Data Streaming Pipeline/: Presentation_Master_Thesis.pptx  README.md
1- Real-Time Data Streaming Pipeline/1- Log Streaming Pipeline/Logstash/: pipelines.yml
1- Real-Time Data Streaming Pipeline/1- Log Streaming Pipeline/docker compose Filebeat_ELK/: logstash.conf
1- Real-Time Data Streaming Pipeline/2- SCADA Streaming Pipeline/1-HSE-Kafka Driver/: vcsKafkaExport.ctl
1- Real-Time Data Streaming Pipeline/2- SCADA Streaming Pipeline/2-WinCC-OA Ctrl Extension/: KafkaStream_ExternHdl.hxx
1-Log Streaming Pipeline/Filebeat/: filebeat_SCADA_template.yml
1-Log Streaming Pipeline/docker compose Filebeat_ELK/: DockerfileFilebeat  DockerfileKibana  DockerfileLogstash  docker-compose.yml  elasticsearch.yml  filebeat.yml  kibana.yml  log4j2.properties  logstash.yml
1-Real-Time Data Streaming Pipeline/2-SCADA Streaming Pipeline/2-WinCC-OA Ctrl Extension/: CMakeLists.txt  KafkaStream_ExternHdl.cxx  vcsCppKafka.ctl
2- Machine Learning with Python/: ML_SuportVectorMachine.ipynb  ProductHair-LinearOptimization.ipynb
2-Machine Learning with Python/: DataSet1.npz  breast-cancer-wisconsin.csv
2-SCADA Streaming Pipeline/: LHC_KafkaStream.config  vcsDPEgenerator.ctl
2-SCADA Streaming Pipeline/2-WinCC-OA Ctrl Extension/: README.md
2-SCADA Streaming Pipeline/Python metrics/: metrics_ctrlext.py  metrics_driver.py
3- R codes/: machines_pred_modeling.R  transport_habits_stat_learning.R
(+39 files in other folders)
